pushing pravinvaidya framework